--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "firebase": "^5.1.0",
     "react": "^16.4.1",
+    "react-awesome-modal": "^2.0.3",
     "react-dom": "^16.4.1",
     "react-quill": "^1.4.0-beta.1",
     "react-router-dom": "^4.3.1",
