--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "date-fns": "^1.29.0",
     "firebase": "^5.1.0",
     "react": "^16.4.1",
     "react-awesome-modal": "^2.0.3",
