--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.4.1",
     "react-awesome-modal": "^2.0.3",
     "react-dom": "^16.4.1",
+    "react-helmet": "^5.2.0",
     "react-quill": "^1.4.0-beta.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
