--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "guardiadmin",
+  "name": "guardianesdelrol",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,11 +18,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "now-build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "copy": "cp build/index.html build/200.html",
-    "surge": "surge build guardiadmin.surge.sh",
-    "deploy": "npm run build && npm run copy && npm run surge"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "surge": "^0.20.1"
