--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-quill": "^1.4.0-beta.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-select": "^2.4.3",
     "slugg": "^1.2.1",
     "styled-components": "^3.3.3"
   },
@@ -22,7 +23,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "surge": "^0.20.1"
-  }
+  "devDependencies": {}
 }
