--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-helmet": "^5.2.0",
     "react-quill": "^1.4.0-beta.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^3.0.0",
     "react-select": "^2.4.3",
     "slugg": "^1.2.1",
     "styled-components": "^3.3.3"
@@ -23,5 +23,17 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
