now.json config for cache

--- a/now.json
+++ b/now.json
@@ -11,6 +11,11 @@
   ],
   "routes": [
     {
+      "src": "/index.html",
+      "headers": { "cache-control": "s-maxage=0" },
+      "dest": "/index.html"
+    },
+    {
       "src": "/static/(.*)",
       "headers": { "cache-control": "s-maxage=31536000,immutable" },
       "dest": "/static/$1"
