--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "date-fns": "^1.29.0",
-    "firebase": "^5.1.0",
+    "date-fns": "^1.30.1",
+    "firebase": "^7.9.3",
     "quill-image-resize": "^3.0.9",
     "quill-plugin-image-upload": "0.0.6",
-    "react": "^16.8.6",
-    "react-awesome-modal": "^2.0.3",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0",
-    "react-quill": "^1.4.0-beta.1",
+    "react": "^16.13.0",
+    "react-awesome-modal": "^2.0.5",
+    "react-dom": "^16.13.0",
+    "react-helmet": "^5.2.1",
+    "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.4.0",
-    "react-select": "^2.4.3",
+    "react-select": "^2.4.4",
     "slugg": "^1.2.1",
-    "styled-components": "^3.3.3"
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,7 +24,7 @@
     "now-build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy": "now --target=production"
+    "deploy": "now --prod"
   },
   "browserslist": {
     "production": [
